# beam

./: .gitignore  CMakeLists.txt  README.md  build_dll.bat  ds_beamforming.c  ds_beamforming.h  ds_bf.def  main.cpp  output.pcm
speex/fft/: fft_wrap.c  fft_wrap.h
